%changelog
* Sat Nov 27 2021 Roveda <roveda@universal-logging-system.org> 1.0-29
2021-11-27: Changed default LANG setting from C to en_US.UTF-8 in all .sh scripts.
Added full UTF-8 support to all perl scripts Umlaute should now be processed correctly 
in output to files sent to ULS.
2021-11-16: Added detail 'database role - status' in watch_oracle.pl. The minus sign 
is used as separator instead of the comma, which always led to misinterpretations in 
limit and report definitions ('database role, status' will be removed in a later version).

* Wed Oct 20 2021 Roveda <roveda@universal-logging-system.org> 1.0-28
2021-10-20: Number of max processes will be re-sent to ULS, if the value has changed.

* Sun Oct 17 2021 Roveda <roveda@universal-logging-system.org> 1.0-27
2021-10-17: Corrected the retrieval of usage in tablespace_usage().

* Sun May 30 2021 Roveda <roveda@universal-logging-system.org> 1.0-26
2021-05-29: Added NO_ALERT_LOG as option in configuration file.

* Wed Mar 17 2021 Roveda <roveda@universal-logging-system.org> 1.0-25
2021-03-17: Changed 'blocking sessions' in watch_oracle.pl (now version 1.00).
2021-02-05: Added the number of inactive online redo logs to watch_oracle.pl.

* Wed Jan 20 2021 Roveda <roveda@universal-logging-system.org> 1.0-24
2021-01-18: The sga size is only sent once a day in watch_oracle.pl if it does not change.

* Thu Nov 26 2020 Roveda <roveda@universal-logging-system.org> 1.0-23
2020-11-26: implemented a smooth change to new workfile in watch_oracle.pl, 
no reset to beginning of alert.log. 

* Thu Oct 01 2020 Roveda <roveda@universal-logging-system.org> 1.0-22
2020-10-01: merged the preliminary watch_oracle_pdbs.pl script into watch_oracle.pl.
Changed crontab file back to one entry.

* Tue Sep 01 2020 Roveda <roveda@universal-logging-system.org> 1.0-21
2020-09-01: Wrong timestamp for 'maintenance window start-stop' corrected.
2020-08-30: Enhanced version of watch_oracle_pdbs.pl.