@@ -63,23 +63,32 @@
 # 2021-11-27      roveda      0.03
 #   Changed default LANG setting from C to en_US.UTF-8
 #
+# 2021-12-02      roveda      0.04
+#   Added echoerr() and its usage.
+#   Get current directory thru 'readlink'.
 #
 # ===================================================================
 
+# -----
+# Function to echo to stderr
+echoerr() { printf "%s\n" "$*" >&2; }
 
+# -----
 USAGE="uls_settings.sh  <environment_script>  <configuration_file>"
 
 unset LC_ALL
 # export LANG=C
 export LANG=en_US.UTF-8
 
-cd `dirname $0`
+mydir=$(dirname "$(readlink -f "$0")")
+cd "$mydir"
 
 # -----
 # Check number of arguments
 
 if [[ $# -ne 2 ]] ; then
-  echo "$USAGE"
+  echoerr "ERROR: Improper number of parameters => aborting script"
+  echoerr "$USAGE"
   exit 1
 fi
 
@@ -89,15 +98,14 @@ fi
 ORAENV="$1"
 
 if [[ ! -f "$ORAENV" ]] ; then
-  echo "Error: environment script '$ORAENV' not found => aborting script"
+  echoerr "ERROR: environment script '$ORAENV' not found => aborting script"
   exit 2
 fi
 
 . "$ORAENV"
 
 if [[ -z "$ORACLE_SID" ]] ; then
-  echo 
-  echo "Error: the Oracle environment is not set up correctly => aborting script"
+  echoerr "ERROR: the Oracle environment is not set up correctly => aborting script"
   exit 2
 fi
 
@@ -107,8 +115,7 @@ fi
 CONFG="$2"
 
 if [[ ! -f "$CONFG" ]] ; then
-  echo
-  echo "Error: standard configuration file '$CONFG' not found => aborting script"
+  echoerr "ERROR: standard configuration file '$CONFG' not found => aborting script"
   exit 2
 fi
 
@@ -122,6 +129,15 @@ export HOSTNAME
 # Remember to include the directory where flush_test_values can
 # be found ('/usr/bin' or '/usr/local/bin') in the PATH.
 
+# -----
+# Set LANG explicitly to be used in the Perl scripts
+export LANG=en_US.UTF-8
+
+# Set Oracle NLS parameter
+export NLS_LANG=AMERICAN_AMERICA.UTF8
+export NLS_DATE_FORMAT="YYYY-MM-DD hh24:mi:ss"
+export NLS_TIMESTAMP_FORMAT="YYYY-MM-DD HH24:MI:SS"
+export NLS_TIMESTAMP_TZ_FORMAT="YYYY-MM-DD HH24:MI:SS TZH:TZM"
 
 # -----
 # Call the script.
