@@ -3,7 +3,7 @@
 # watch_oracle.sh 
 #
 # ---------------------------------------------------------
-# Copyright 2016 - 2021, roveda
+# Copyright 2016-2018, 2020, 2021, roveda
 #
 # This file is part of the 'ULS Client for Oracle'.
 #
@@ -75,23 +75,33 @@
 # 2021-11-27      roveda      0.06
 #   Changed default LANG setting from C to en_US.UTF-8
 #
+# 2021-12-02      roveda      0.07
+#   Added echoerr(), moved LANG=en_US.UTF-8 after having set the Oracle environment.
+#   Get current directory thru 'readlink'.
+#
 #
 # ===================================================================
 
+# -----
+# Function to echo to stderr
+echoerr() { printf "%s\n" "$*" >&2; }
 
+# -----
 USAGE="watch_oracle.sh  <environment_script>  <configuration_file>"
 
 unset LC_ALL
 # export LANG=C
 export LANG=en_US.UTF-8
 
-cd `dirname $0`
+mydir=$(dirname "$(readlink -f "$0")")
+cd "$mydir"
 
 # -----
 # Check number of arguments
 
 if [[ $# -ne 2 ]] ; then
-  echo "$USAGE"
+  echoerr "ERROR: Improper number of parameters => aborting script"
+  echoerr "$USAGE"
   exit 1
 fi
 
@@ -101,15 +111,14 @@ fi
 ORAENV="$1"
 
 if [[ ! -f "$ORAENV" ]] ; then
-  echo "Error: environment script '$ORAENV' not found => aborting script"
+  echoerr "ERROR: environment script '$ORAENV' not found => aborting script"
   exit 2
 fi
 
 . "$ORAENV"
 
 if [[ -z "$ORACLE_SID" ]] ; then
-  echo 
-  echo "Error: the Oracle environment is not set up correctly => aborting script"
+  echoerr "ERROR: the Oracle environment is not set up correctly => aborting script"
   exit 2
 fi
 
@@ -119,8 +128,7 @@ fi
 CONFG="$2"
 
 if [[ ! -f "$CONFG" ]] ; then
-  echo
-  echo "Error: standard configuration file '$CONFG' not found => aborting script"
+  echoerr "ERROR: standard configuration file '$CONFG' not found => aborting script"
   exit 2
 fi
 
@@ -136,6 +144,16 @@ export HOSTNAME
 
 
 # -----
+# Set LANG explicitly to be used in the Perl scripts
+export LANG=en_US.UTF-8
+
+# Set Oracle NLS parameter
+export NLS_LANG=AMERICAN_AMERICA.UTF8
+export NLS_DATE_FORMAT="YYYY-MM-DD hh24:mi:ss"
+export NLS_TIMESTAMP_FORMAT="YYYY-MM-DD HH24:MI:SS"
+export NLS_TIMESTAMP_TZ_FORMAT="YYYY-MM-DD HH24:MI:SS TZH:TZM"
+
+# -----
 # Exit silently, if the TEST_BEFORE_RUN command does
 # not return the exit value 0.
 
@@ -144,14 +162,6 @@ perl test_before_run.pl "$CONFG" > /dev/null 2>&1 || exit
 
 # -----
 # Call the script.
-
-# Set for decimal point, english messages and ISO date representation
-# (for this client connection only).
-# export NLS_LANG=AMERICAN_AMERICA.WE8ISO8859P1
-export NLS_LANG=AMERICAN_AMERICA.UTF8
-export NLS_DATE_FORMAT="YYYY-MM-DD hh24:mi:ss"
-export NLS_TIMESTAMP_FORMAT="YYYY-MM-DD HH24:MI:SS"
-export NLS_TIMESTAMP_TZ_FORMAT="YYYY-MM-DD HH24:MI:SS TZH:TZM"
 
 perl watch_oracle.pl "$CONFG"
 
