@@ -3,7 +3,7 @@
 # watch_oracle_default
 #
 # ---------------------------------------------------------
-# Copyright 2018, roveda
+# Copyright 2018, 2021, roveda
 #
 # This file is part of the 'ULS Client for Oracle'.
 #
@@ -61,23 +61,31 @@
 # 2021-11-27      roveda      0.02
 #   Changed default LANG setting from C to en_US.UTF-8
 #
+# 2021-12-02      roveda      0.03
+#   Added echoerr() and its usage, added NLS_TIMESTAMP_FORMAT and NLS_TIMESTAMP_TZ_FORMAT.
+#   Moved LANG=en_US.UTF-8 to be set before the Perl scripts are invoked.
+#   Get current directory thru 'readlink'.
 #
 # ===================================================================
 
+# -----
+# Function to echo to stderr
+echoerr() { printf "%s\n" "$*" >&2; }
 
+# -----
 USAGE="watch_oracle_default"
 
 unset LC_ALL
-# export LANG=C
-export LANG=en_US.UTF-8
+export LANG=C
 
-cd `dirname $0`
+mydir=$(dirname "$(readlink -f "$0")")
+cd "$mydir"
 
 # -----
 # Check environment
 
 if [[ -z "$ORACLE_SID" || -z "$ORACLE_HOME" ]] ; then
-  echo "Error: the Oracle environment is not set up correctly => aborting script"
+  echoerr "ERROR: the Oracle environment is not set up correctly => aborting script"
   exit 2
 fi
 
@@ -87,8 +95,7 @@ fi
 CONFG="/etc/uls/oracle/standard.conf"
 
 if [[ ! -f "$CONFG" ]] ; then
-  echo
-  echo "Error: standard configuration file '$CONFG' not found => aborting script"
+  echoerr "ERROR: standard configuration file '$CONFG' not found => aborting script"
   exit 2
 fi
 
@@ -102,6 +109,15 @@ export HOSTNAME
 # Remember to include the directory where flush_test_values can
 # be found (/usr/bin, /usr/local/bin) in the PATH.
 
+# -----
+# Set LANG explicitly to be used in the Perl scripts
+export LANG=en_US.UTF-8
+
+# Set Oracle NLS parameter
+export NLS_LANG=AMERICAN_AMERICA.UTF8
+export NLS_DATE_FORMAT="YYYY-MM-DD hh24:mi:ss"
+export NLS_TIMESTAMP_FORMAT="YYYY-MM-DD HH24:MI:SS"
+export NLS_TIMESTAMP_TZ_FORMAT="YYYY-MM-DD HH24:MI:SS TZH:TZM"
 
 # -----
 # Exit silently, if the TEST_BEFORE_RUN command does
@@ -111,12 +127,6 @@ perl test_before_run.pl "$CONFG" > /dev/null 2>&1 || exit
 
 # -----
 # Call the script.
-
-# Set for decimal point, english messages and ISO date representation
-# (for this client only).
-# export NLS_LANG=AMERICAN_AMERICA.WE8ISO8859P1
-export NLS_LANG=AMERICAN_AMERICA.UTF8
-export NLS_DATE_FORMAT="YYYY-MM-DD hh24:mi:ss"
 
 perl watch_oracle.pl "$CONFG"
 
